# BingWallpaper

./: .gitignore  LICENSE  Makefile  Makefile.in  README.md  bingit  configure  configure.ac
src/: Makefile.am  Makefile.in  main.c
